Fixed navbar overlapping Skills card

--- a/portfolio/src/Components/PageSections/Stack/Stack.css
+++ b/portfolio/src/Components/PageSections/Stack/Stack.css
@@ -19,7 +19,7 @@
 
 /* individual card */
 .card {
-	height: 70vh;
+	height: 67vh;
 	width: 100%;
 }
 
@@ -47,8 +47,8 @@
 }
 
 .row2 {
-	margin-top: 30%;
-	margin-bottom: 30%;
+	margin-top: 25%;
+	margin-bottom: 25%;
 	background-color: transparent;
 	height: 90px;
 }
